hotfix/create schedule (#98)
